@@ -1,3 +1,9 @@
+2008-07-02  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
+
+	* arch/win32/Makefile.am: Added new file _all.dsp.
+
+	* c64/reu.c: The banking register has a shadow register, too.
+
 2008-07-01  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
 
 	* Version 1.22.22
